# librarian

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  LICENSE  README.md  marketplace.json  pyproject.toml  setup-signing.sh
.claude-plugin/: marketplace.json  plugin.json
_site_preview/: graph.html  index.html
_site_preview_output/: graph.html  index.html
dashboard/: librarian-dashboard-template-20260412-V3.0.html
docs/: REGISTRY.yaml  bug-bounty-report-20260413-V1.0.md  librarian-architecture-20260411-V1.0.md  librarian-buildout-plan-20260411-V1.0.md  librarian-buildout-plan-20260411-V1.1.md  librarian-buildout-plan-20260411-V1.2.md  librarian-evidence-20260413-V1.0.json  librarian-evidence-20260413.json  librarian-evidence-20260414-V1.0.json  librarian-evidence-20260414-V2.0.json  librarian-evidence-20260414-V3.0.json  librarian-evidence-20260422-V4.0.json  librarian-manifest-20260413-V1.0.json  librarian-manifest-20260413.json  librarian-manifest-20260414-V2.0.json  librarian-manifest-20260414-V3.0.json  librarian-manifest-20260414.json  librarian-manifest-20260422.json  package-structure-20260422-V1.0.md  phase-9-pypi-rename-migration-20260422-V1.0.md  phase-d-implementation-plan.md  phase-f-plugin-and-release-20260413-V1.0.md  phase-f-plugin-and-release-20260413-V1.1.md  phase-f-publish-checklist-20260413-V1.0.md  phase-g-templates-and-recommendations-20260412-V1.0.md  release-notes-20260413-V1.0.md  release-notes-20260413-V2.0.md  release-notes-20260414-V3.0.md  release-notes-20260414-V4.0.md  release-notes-20260414-V5.0.md  release-notes-20260422-V6.0.md  release-v0-7-2-runbook-20260413-V1.0.md  release-v0-7-3-runbook-20260414-V1.0.md  release-v0-7-4-runbook-20260414-V1.0.md  release-v0-7-5-runbook-20260414-V1.0.md  release-v0-8-0-runbook-20260422-V1.0.md  security-review-20260413-V1.0.md  session-history-20260422-V1.0.md
examples/: project_config.example.yaml  project_config.full.yaml  project_config.minimal.yaml  project_config.prism.yaml
hooks/: hooks.enabled.example.json  hooks.json
librarian/: __init__.py  __main__.py  audit.py  config.py  dashboard.py  diffaudit.py  evidence.py  manifest.py  naming.py  oplog.py  oplog_lock.py  precommit.py  recommend.py  registry.py  review.py  sitegen.py  versioning.py  yaml_errors.py
schema/: manifest.schema.json  project_config.schema.yaml  registry.schema.yaml
scripts/: librarian-oplog-lock-20260414-V1.0.sh  librarian-pre-commit-hook-20260411-V1.0.sh
skill/: SKILL.md
tests/: conftest.py  test_audit.py  test_config.py  test_dashboard.py  (+15 more)
(+102 files in other folders)
