[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librarian-2026"
version = "0.7.1"
description = "Document governance, version control, and registry management. Enforces naming conventions, tracks versions, manages cross-references, and produces tamper-evident manifests."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "Chris Kahn", email = "272935920+ghengis5-git@users.noreply.github.com"}
]
keywords = ["documents", "governance", "versioning", "audit", "registry", "naming-conventions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/ghengis5-git/librarian"
Repository = "https://github.com/ghengis5-git/librarian"
Issues = "https://github.com/ghengis5-git/librarian/issues"

[project.scripts]
librarian = "librarian.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["librarian*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
librarian = ["templates/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
